# PACPaint_Neo

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
src/models/: model_comp_BASAL_CLASSIC_only.pth  model_neo.pth
src/pacpaint_neo/: display_wsi.py  extract_features.py  extract_tiles.py  get_comp_preds.py  get_neo_preds.py  process_wsi.ipynb  process_wsi.py
